// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurvedArrow renders with default values 1`] = `
<body>
  <div>
    <path
      d="M 0.8333333333333334,0 A 0.8333333333333334,0.8333333333333334 0 0 1 0.7874641219289481,0.2726622473301269 L 0.47247847315736885,0.16359734839807613 L 0.5403023058681398,0.8414709848078965 L 1.4174354194721066,0.49079204519422837 L 1.1024497707005274,0.3817271462621777 A 1.1666666666666667,1.1666666666666667 0 0 0 1.1666666666666667,0 Z"
    />
  </div>
</body>
`;

exports[`CurvedArrow renders with the given parameters 1`] = `
<body>
  <div>
    <path
      d="M 118.75,182.47595264191645 A 37.5,37.5 0 0 0 118.75,182.47595264191645 L 112.5,171.65063509461098 L 100,200 L 137.5,214.9519052838329 L 131.25,204.12658773652743 A 62.5,62.5 0 0 0 131.25,204.12658773652743 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedArrow updates when the parameter angle is modified 1`] = `
<body>
  <div>
    <path
      d="M 118.75,182.47595264191645 A 37.5,37.5 0 0 1 86.07199634467996,184.81753457925174 L 90.71466422978665,173.21168971950118 L 56.69872981077806,175 L 72.14399268935993,219.6350691585035 L 76.78666057446661,208.02922429875292 A 62.5,62.5 0 0 0 131.25,204.12658773652743 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedArrow updates when the parameter clockwise is modified 1`] = `
<body>
  <div>
    <path
      d="M 125,193.30127018922192 L 89.30647539976759,224.23374254087037 L 91.08872949980633,211.86145211739196 A 62.5,62.5 0 0 1 71.33849397143263,205.5406884380667 L 82.80309638285958,183.32441306284002 A 37.5,37.5 0 0 0 94.6532376998838,187.11687127043518 L 96.43549179992253,174.74458084695678 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedArrow updates when the parameter cx is modified 1`] = `
<body>
  <div>
    <path
      d="M 58.75,182.47595264191645 A 37.5,37.5 0 0 1 47.09198326556328,186.82327760209526 L 44.72798884370885,174.54885173473016 L 17.0707951771461,194.43255075045334 L 54.18396653112656,223.64655520419052 L 51.81997210927213,211.37212933682542 A 62.5,62.5 0 0 0 71.25,204.12658773652743 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedArrow updates when the parameter cy is modified 1`] = `
<body>
  <div>
    <path
      d="M 118.75,72.47595264191645 A 37.5,37.5 0 0 1 107.09198326556327,76.82327760209526 L 104.72798884370886,64.54885173473018 L 77.0707951771461,84.43255075045336 L 114.18396653112656,113.64655520419052 L 111.81997210927213,101.37212933682542 A 62.5,62.5 0 0 0 131.25,94.12658773652741 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedArrow updates when the parameter fill is modified 1`] = `
<body>
  <div>
    <path
      d="M 118.75,182.47595264191645 A 37.5,37.5 0 0 1 107.09198326556327,186.82327760209526 L 104.72798884370886,174.54885173473016 L 77.0707951771461,194.43255075045334 L 114.18396653112656,223.64655520419052 L 111.81997210927213,211.37212933682542 A 62.5,62.5 0 0 0 131.25,204.12658773652743 Z"
      fill="blue"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedArrow updates when the parameter height is modified 1`] = `
<body>
  <div>
    <path
      d="M 118.75,182.47595264191645 A 37.5,37.5 0 0 1 110.13242864290208,186.10517815766178 L 105.40396194288111,169.25609501741963 L 77.0707951771461,194.43255075045334 L 121.61584777152444,227.02438006967847 L 116.88738107150347,210.17529692943629 A 62.5,62.5 0 0 0 131.25,204.12658773652743 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedArrow updates when the parameter radius is modified 1`] = `
<body>
  <div>
    <path
      d="M 123.75,191.13620667976085 A 47.5,47.5 0 0 1 113.05843699516446,195.669762679954 L 109.62200620696328,183.6514040799661 L 81.71164983283211,207.14487070737889 L 123.36772935976796,231.7248384799177 L 119.9312985715668,219.70647987992982 A 72.5,72.5 0 0 0 136.25,212.7868417743718 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedArrow updates when the parameter rotation is modified 1`] = `
<body>
  <div>
    <path
      d="M 100,187.5 A 37.5,37.5 0 0 1 87.73019887014429,185.43588548680265 L 91.82013258009619,173.62392365786843 L 57.926450759605174,177.01511529340698 L 75.46039774028858,220.87177097360532 L 79.55033145024048,209.0598091446711 A 62.5,62.5 0 0 0 100,212.5 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedArrow updates when the parameter stroke is modified 1`] = `
<body>
  <div>
    <path
      d="M 118.75,182.47595264191645 A 37.5,37.5 0 0 1 107.09198326556327,186.82327760209526 L 104.72798884370886,174.54885173473016 L 77.0707951771461,194.43255075045334 L 114.18396653112656,223.64655520419052 L 111.81997210927213,211.37212933682542 A 62.5,62.5 0 0 0 131.25,204.12658773652743 Z"
      fill="red"
      stroke="blue"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedArrow updates when the parameter stroke-width is modified 1`] = `
<body>
  <div>
    <path
      d="M 118.75,182.47595264191645 A 37.5,37.5 0 0 1 107.09198326556327,186.82327760209526 L 104.72798884370886,174.54885173473016 L 77.0707951771461,194.43255075045334 L 114.18396653112656,223.64655520419052 L 111.81997210927213,211.37212933682542 A 62.5,62.5 0 0 0 131.25,204.12658773652743 Z"
      fill="red"
      stroke-width="3"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedArrow updates when the parameter thickness is modified 1`] = `
<body>
  <div>
    <path
      d="M 112.5,171.65063509461098 A 25,25 0 0 1 104.72798884370886,174.54885173473016 L 77.0707951771461,194.43255075045334 L 114.18396653112656,223.64655520419052 A 75,75 0 0 0 137.5,214.9519052838329 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedArrow updates when the parameter transform is modified 1`] = `
<body>
  <div>
    <path
      d="M 118.75,182.47595264191645 A 37.5,37.5 0 0 1 107.09198326556327,186.82327760209526 L 104.72798884370886,174.54885173473016 L 77.0707951771461,194.43255075045334 L 114.18396653112656,223.64655520419052 L 111.81997210927213,211.37212933682542 A 62.5,62.5 0 0 0 131.25,204.12658773652743 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(180)"
    />
  </div>
</body>
`;

exports[`CurvedArrow updates when the parameter width is modified 1`] = `
<body>
  <div>
    <path
      d="M 118.75,182.47595264191645 A 37.5,37.5 0 0 1 99.63495985029893,187.49822323376276 L 99.75663990019929,174.99881548917517 L 68.70046757353452,188.99152818093484 L 99.26991970059787,224.99644646752554 L 99.39159975049822,212.49703872293796 A 62.5,62.5 0 0 0 131.25,204.12658773652743 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;
